<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_to_main_thread" />

    <Button
        android:id="@+id/bt_enable_disable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_disable_button" />

    <Button
        android:id="@+id/bt_random_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/post_delayed" />

    <Button
        android:id="@+id/bt_enable_disable_delay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_disable_button" />

    <Button
        android:id="@+id/bt_random_color_delay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/post_delayed_with_token" />

    <Button
        android:id="@+id/bt_random_color_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_color" />

    <Button
        android:id="@+id/bt_show_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_toast" />

    <Button
        android:id="@+id/bt_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/bt_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/test_button" />

    <FrameLayout
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@color/black"
        android:layout_marginTop="8dp"
        android:padding="2dp" >

        <View
            android:id="@+id/color_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:background="@color/white" />


    </FrameLayout>

</LinearLayout>