<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BadBadTimerActivity">

    <TextView
        android:id="@+id/tv_timer_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:text="@string/timer"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_timer_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_timer_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        tools:text="10 seconds"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:progress="100"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_timer_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:minHeight="10dp"
        android:layout_marginHorizontal="16dp"
        tools:progress="100" />

    <Button
        android:id="@+id/bt_start_timer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"
        app:layout_constraintStart_toStartOf="@id/progress_bar"
        app:layout_constraintEnd_toEndOf="@id/progress_bar"
        android:layout_marginTop="16dp"
        android:text="@string/start" />

    <TextView
        android:id="@+id/anr_detector_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bt_start_timer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:text="@string/anr_detector" />

    <SeekBar
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/anr_detector_label"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/bt_start_timer"
        app:layout_constraintEnd_toEndOf="@id/bt_start_timer"
        android:progress="50" />


</androidx.constraintlayout.widget.ConstraintLayout>